# chat.rs

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: publish.yaml  release.yaml
chat/: all.html  enum.Opt.html  fn.main.html  index.html  sidebar-items.js
chat/app/: enum.TuiAppEvent.html  index.html  sidebar-items.js  struct.AsyncKeys.html  struct.BasicApp.html  struct.TuiApp.html  trait.App.html  type.Rx.html  type.TuiStyledString.html  type.Tx.html
chat/app/basic_app/: index.html  sidebar-items.js  (+3 more)
chat/client/: enum.ClientInput.html  index.html  sidebar-items.js  struct.Client.html  type.Rx.html  type.Transport.html  type.Tx.html
chat/error/: enum.Error.html  index.html  type.Result.html
chat/message/: enum.Message.html  index.html  sidebar-items.js  type.User.html
chat/protocol/: enum.ClientCommand.html  enum.Operation.html  enum.ServerCommand.html  enum.ServerOperation.html  index.html  sidebar-items.js
chat/server/: index.html  sidebar-items.js  struct.Peer.html  struct.RecvPeer.html  struct.SendPeer.html  struct.Server.html  struct.ServerState.html  type.Rx.html  type.SharedState.html  type.Transport.html  type.Tx.html
chat/utils/: fn.new_name.html  index.html  sidebar-items.js
implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
src/: app.rs  basic_app.rs  client.rs  error.rs  main.rs  message.rs  protocol.rs  server.rs  tui_app.rs  utils.rs
src/app/: basic_app.rs  tui_app.rs
src/chat/: app.rs.html  client.rs.html  error.rs.html  main.rs.html  message.rs.html  protocol.rs.html  server.rs.html  utils.rs.html
(+25 files in other folders)
