[package]
name = "chat"
version = "0.3.0"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
structopt = "*"
tokio = { version = "0.3", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
futures = "*"
log = "*"
env_logger = "*"
tui = "*"
termion = "1.5"
unicode-width = "*"
chrono = "0.4"
names = "*"
