[package]
name = "chat"
version = "0.4.1"
authors = ["Bugen Zhao <i@bugenzhao.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
structopt = "0.3.20"
tokio = { version = "0.3.4", features = ["full"] }
tokio-util = { version = "0.5.0", features = ["full"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
futures = "0.3.8"
log = "0.4.11"
env_logger = "0.8.2"
tui = "0.13.0"
termion = "1.5.5"
unicode-width = "0.1.8"
chrono = "0.4.19"
names = "0.11.0"
